--- a/nfive.yml
+++ b/nfive.yml
@@ -6,5 +6,7 @@ license: LGPL-3.0-or-later
 client:
   main:
     - Gaston11276.Spawnmenu.Client
+  files:
+    - SimpleUi.dll
 dependencies:
   gaston11276/fivemui: ^1.0.0
